add ads module
